Fixing giscus comments

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: "https://youkii-xr.github.io/blog"
 title: Youkii Blog
 pagination:
-  pagerSize: 5
+  pagerSize: 10
 theme: PaperMod
 
 # Important for GitHub Pages subdirectory
@@ -44,17 +44,18 @@ params:
   tocopen: false
   math: true
 
-  giscus:
-    repo: "youkii-xr/youkii-xr.github.io"
-    repoId: "R_kgDOJFDkiQ"  # Get from giscus.app
-    category: "General"
-    categoryId: "DIC_kwDOJFDkic4CuTQf"  # Get from giscus.app
-    mapping: "pathname"
-    reactionsEnabled: "1"
-    emitMetadata: "0"
-    inputPosition: "bottom"
-    theme: "preferred_color_scheme"
-    lang: "en"
+  commentsConfig:
+    giscus:
+      repo: "youkii-xr/youkii-xr.github.io"
+      repoId: "R_kgDOJFDkiQ"  # Get from giscus.app
+      category: "General"
+      categoryId: "DIC_kwDOJFDkic4CuTQf"  # Get from giscus.app
+      mapping: "pathname"
+      reactionsEnabled: "1"
+      emitMetadata: "0"
+      inputPosition: "bottom"
+      theme: "preferred_color_scheme"
+      lang: "en"
   
   assets:
     disableHLJS: false
